[package]
name = "fides"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allocative = "0.3.0"
anyhow = "1.0.75"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
starlark = "0.10.0"
starlark_derive = "0.10.0"
derive_more = "0.99.17"

[profile.release]
strip = true