[package]
name = "urchin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
ctrlc = "3.4.4"
dirs = "5.0.1"
http_req = "0.10.2"
md5 = "0.7.0"
prost = "0.12.4"
prost-types = "0.12.4"
tokio = {version = "1.37.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.15"
tonic = "0.11.0"
whoami = "1.5.1"
zip = "0.6.6"
wasmer = "4.3.7"
wasmer-wasix = "0.27.0"
wasmer-compiler-llvm = "4.3.7"
wasmer-cache = "4.3.7"


[profile.release]
strip = true

[build-dependencies]
tonic-build = "0.11.0"


[[bin]]
name = "ext"
path = "src/extrun.rs"

