[package]
name = "urchin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
ctrlc = "3.4.4"
dirs = "5.0.1"
http_req = "0.10.2"
md5 = "0.7.0"
prost = "0.12.4"
prost-types = "0.12.4"
tokio = {version = "1.37.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.15"
tonic = "0.11.0"
wasmtime = "25.0.1"
wasmtime-wasi = "25.0.1"
whoami = "1.5.1"
wit-component = "0.218.0"
zip = "0.6.6"


[profile.release]
strip = true

[build-dependencies]
tonic-build = "0.11.0"


[[bin]]
name = "ext"
path = "src/extension/main.rs"

