[package]
name = "spine"
version = "0.1.0"
edition = "2021"
channel = "nightly"

[dependencies]
anyhow = "1.0.95"
jni = "0.21.1"
jvmti = "0.5.0"
uuid = { version = "1.11.0", features = ["v4"] }
libloading = "0.8"
ctor = "0.2.9"
objc = "0.2.7"
dashmap = "6.1.0"
lazy_static = "1.5.0"

[lib]
crate-type = ["cdylib"]
